--- a/lijst.html
+++ b/lijst.html
@@ -638,6 +638,26 @@
       <li><span lang="fr">Boniface, Pascal: <i class="booktitle">Les Intellectuels intègres</i>. Jean-Claude Gawsewitch Éditeur,</span> 2013.
         <abbr>ISBN</abbr> 9782350134178.
       </li>
+      <li>Snowden, Robert; Thompson, Peter; Troscianko, Tom:
+        <i class="booktitle">Basic Vision: An Introduction to Visual Perception</i>. Revised edition. Oxford University Press, 2012. (424 pages)
+        <a href="https://global.oup.com/academic/product/basic-vision-9780199572021"><abbr>ISBN</abbr> 9780199572021</a>.
+      </li>
+      <li>Culler, Jonathan:
+        <i class="booktitle">Barthes: A Very Short Introduction</i>. Oxford University Press, 2002. (160 pages)
+        <a href="https://global.oup.com/academic/product/barthes-a-very-short-introduction-9780192801593"><abbr>ISBN</abbr> 9780192801593</a>.
+        <!--
+          https://www.nurgutebuecher.de/index.php?cl=details&steinscheid=883144&lang=1
+          Antiquariat Dösi BOOKS, €8: https://www.buchfreund.de/de/d/e/9780192801593/a-very-short-introduction?bookId=95482845
+        -->
+      </li>
+      <li>Williamson, Timothy:
+        <i class="booktitle">Philosophical Method: A Very Short Introduction</i>. Oxford University Press, 2020. (160 pages)
+        <a href="https://global.oup.com/academic/product/philosophical-method-a-very-short-introduction-9780198810001"><abbr>ISBN</abbr> 9780198810001</a>.
+      </li>
+      <li>Leitch, Vincent B.:
+        <i class="booktitle">Literary Criticism in the 21st Century: Theory Renaissance</i>. Bloomsbury, 2014. (192 pages)
+        <a href="https://www.bloomsbury.com/uk/literary-criticism-in-the-21st-century-9781472527707/"><abbr>ISBN</abbr> 9781472527707</a>.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
