Add: Coman: John Rawls

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1132,6 +1132,10 @@
             These thinkers remade political philosophy in ways that influenced not only their own trajectory but also that of their critics.
           </q>
         </li>
+        <li>Coman, Julian:
+          <a href="https://www.theguardian.com/inequality/2020/dec/20/john-rawls-can-liberalisms-great-philosopher-come-to-the-wests-rescue-again">John Rawls: can liberalism's great philosopher come to the west's rescue again?</a>,
+          <i class="newspaper">The Observer</i>, 20.12.2020.
+        </li>
       </ul>
 
       <h3>Philosophy of Mind</h3>
@@ -2948,7 +2952,8 @@
       <h2></h2>
       <ul>
         <li>
-          <a href=""></a>
+          <a href=""></a>,
+          <i class="website"></i>,
         </li>
         <li>:
           <i class="booktitle"></i>.
@@ -2957,7 +2962,6 @@
       </ul>
     </section>
     -->
-
     <hr />
     <p>
       <figure>
