Add: Williamson: Philosophical Method: A Very Short Introduction

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -116,6 +116,15 @@
         <a href="http://www.klostermann.de/epages/63574303.sf/de_DE/?ObjectPath=/Shops/63574303/Products/9783465040699"><abbr>ISBN</abbr> 978-3-465-04069-9</a>.
         </span>
       </li>
+      <li>Williamson, Timothy:
+        <i class="booktitle">Philosophical Method: A Very Short Introduction</i>. Oxford University Press, 2020. (160 pages)
+        <a href="https://global.oup.com/academic/product/philosophical-method-a-very-short-introduction-9780198810001"><abbr>ISBN</abbr> 9780198810001</a>.
+        <br />From the publisher's book description:
+        <q>What are philosophers trying to achieve? How can they succeed? Does philosophy make progress? Is it in competition with science, or doing something completely different, or neither?
+        <br />Timothy Williamson tackles some of the key questions surrounding philosophy in new and provocative ways, showing how philosophy begins in common sense curiosity, and develops through our capacity to dispute rationally with each other.
+        Discussing philosophy's ability to clarify our thoughts, he explains why such clarification depends on the development of philosophical theories, and how those theories can be tested by imaginative thought experiments, and compared against each other by standards similar to those used in the natural and social sciences.
+        (&hellip;)</q>
+      </li>
       <li>Baggini, Julian; Fosl, Peter S.:
         <i class="booktitle">The Philosopher's Toolkit: A Compendium of Philosophical Concepts and Methods</i>.
         2nd edition. Wiley, 2010. (304 p.)
@@ -486,7 +495,7 @@
         <i class="blog">Directeur-des-Soins.com</i>, 13.02.2018.
       </li>
       <li><span lang="de">
-        <a href="http://www.information-philosophie.de/?a=1&t=4794&n=2" hreflang="de">Einführungen: Geschichte der Philosophie</a>,
+        <a href="http://www.information-philosophie.de/?a=1&amp;t=4794&amp;n=2" hreflang="de">Einführungen: Geschichte der Philosophie</a>,
         <i class="website">Information Philosophie</i></span> (no date).
         <br />Short introductions to books that cover the history of philosophy and a number of important philosophers from Antiquity to Wilfried Sellars.
         <!--@@PDF-->
@@ -506,6 +515,21 @@
       </li>
     </ul>
 
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>
+          <a href=""></a>,
+          <i class="website"></i>,
+        </li>
+        <li>:
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
