--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -261,6 +261,12 @@
           <br />This is the first volume of a biography that will eventually span four volumes.
           <!--review: https://www.hsozkult.de/publicationreview/id/reb-27270 -->
         </li>
+        <li><span lang="de">Heinrich, Michael:
+          <i class="booktitle">Kritik der politischen Ökonomie. Eine Einführung in «Das Kapital» von Karl Marx</i>. 14. Auflage. Schmetterling Verlag,</span> 2018.
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-697-6.htm"><abbr>ISBN</abbr> 3-89657-697-6</a>.
+          <br />See also
+          <a href="http://www.theorie.org/titel/697_kritik_der_politischen_oekonomie" hreflang="de" lang="de"><i class="booktitle">Kritik der politischen Ökonomie</i> on theorie.org</a>.
+        </li>
         <li><span lang="de">Nippel, Wilfried:
           <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (128 pages)
           <a href="https://www.chbeck.de/nippel-karl-marx/product/20530828" hreflang="de"><abbr>ISBN</abbr> 978-3-406-71418-4</a>.
