Add Haben Girma

--- a/lijst.html
+++ b/lijst.html
@@ -255,6 +255,10 @@
         <a href="https://www.youtube.com/watch?v=a3_fQiGmM1I">Sole Survivor Of Holocaust Finds More Than Uncanny Parallels to his Past in Trump</a>
         in the Thom Hartmann Program (27.06.2018).)
       </li>
+      <li>Girma, Haben:
+        <i class="booktitle">Haben: The Deafblind Woman Who Conquered Harvard Law</i>. Little, Brown &amp; Company / Hachette, 2019. (288 pages)
+        <a href="https://www.hachettebookgroup.com/titles/haben-girma/haben/9781538728734/"><abbr>ISBN</abbr> 9781538728734</a>.
+      </li>
     </ul>
   </section>
 
