Add: Laska: Den Bann brechen

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2653,6 +2653,14 @@
           <a href="https://aeon.co/essays/the-phenomenology-of-merleau-ponty-and-embodiment-in-the-world">The body as mediator / The phenomenology of Merleau-Ponty and embodiment in the world</a>,
           <i class="website">Aeib</i>, 07.12.2020.
         </li>
+        <li>Laska, Bernd A.:
+          <a href="http://www.lsr-projekt.de/msbann1.html">Den Bann brechen ! - Max Stirner redivivus. Teil 1: Über Marx und die Marxforschung</a>,
+          <i class="website"><abbr>LSR</abbr></i>, 2002.
+        </li>
+        <li>Laska, Bernd A.:
+          <a href="http://www.lsr-projekt.de/msbann2.html">Den Bann brechen ! - Max Stirner redivivus. Teil 2: Über Nietzsche und die Nietzscheforschung</a>,
+          <i class="website"><abbr>LSR</abbr></i>, 2002.
+        </li>
         <!--@@section h3 Wittgenstein-->
         <li>Ground, Ian:
           <a href="https://www.the-tls.co.uk/articles/public/ludwig-wittgenstein-honesty-ground/">The relentless honesty of Ludwig Wittgenstein</a>,
