Add: www.learnreligions.com

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -782,6 +782,9 @@
           <br />This is an excerpt from Roth's novel <i class="booktitle">Indignation</i> (2008), translated by <span lang="fr">Marie-Claire Pasquier</span>.
           The text relies heavily on Bertrand Russell's <a href="https://en.wikipedia.org/wiki/Why_I_Am_Not_a_Christian">Why I Am Not a Christian</a>.
         </li>
+        <li>
+          <a href="https://www.learnreligions.com/">Learn Religions - Guide to the Beliefs and Religions of the World</a>.
+        </li>
 
         <!--Aalst carnaval:-->
         <li><span lang="nl">
