Add: Gaukroger: The Failures of Philosophy: A Historical Essay

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -612,6 +612,15 @@
           <span lang="en-GB">This book discusses whether philosophy is a type of 
           knowledge and whether there are philosophical truths.</span>
         </li>
+        <li>Gaukroger, Stephen:
+          <i class="booktitle">The Failures of Philosophy: A Historical Essay</i>. Princeton University Press, 2020. (316 pages)
+          <a href="https://press.princeton.edu/books/hardcover/9780691207506/the-failures-of-philosophy"><abbr>ISBN</abbr> 9780691207506</a>.
+          <br />Quoted from the publisher's book description:
+          <q>(&hellip;)<i class="booktitle">The Failures of Philosophy</i>
+          presents a historical investigation of philosophy in the West, from the perspective of its most significant failures: attempts to provide an account of the good life, to establish philosophy as a discipline that can stand in judgment over other forms of thought, to set up philosophy as a theory of everything, and to construe it as a discipline that rationalizes the empirical and mathematical sciences. Stephen Gaukroger argues that these failures reveal more about philosophical enquiry and its ultimate point than its successes ever could.
+          These failures illustrate how and why philosophical inquiry has been conceived and reconceived, why philosophy has been thought to bring distinctive skills to certain questions, and much more.
+          (&hellip;)</q>
+        </li>
       </ul>
 
       <p>Some philosophers take a different approach: instead of describing the achievements
