Add: Willinsky: Technologies for Knowing

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -920,6 +920,10 @@
     <section>
       <h2>Miscellaneous Other Links</h2>
       <ul>
+        <li>Willinsky, John:
+          <i class="booktitle">Technologies of Knowing: A Proposal for the Human Sciences</i>. Beacon Press, 2000. (224 pages)
+          <a href="https://www.penguinrandomhouse.com/books/204179/technologies-of-knowing-by-john-willinsky/"><abbr>ISBN</abbr> 9780807061077</a>.
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=XmxIK9p0SNM">Tomatoes, or How Not To Define "Art"</a>
           (<i class="ytchannel">Innuendo Studios</i> on YouTube, 12 minutes, 02.01.2017).
