Add: Hill: Where loneliness can lead / For Hannah Arendt, totalitarianism is rooted in loneliness

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
-  <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
+  <!--meta charset="utf-8" /--><!--Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>Philosophy | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
   <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
@@ -139,20 +139,17 @@
           This talk mentions benefits of studying philosophy (<abbr>e.g.</abbr>
           analytical skills and verbal reasoning) but that is not the most important
           benefit:
-          <strong><q cite="https://www.youtube.com/watch?v=7kYKF3IAwyw&t=1m34s">the 
-          great value of philosophy is that it transforms the people who study
-          it.</q></strong>
+          <strong><q cite="https://www.youtube.com/watch?v=7kYKF3IAwyw&amp;t=1m34s">the great value of philosophy is that it transforms the people who study it.</q></strong>
         </li>
         <li>
-          <a href="http://www.theguardian.com/commentisfree/2015/nov/19/philosophy-poverty-drugs-kids-young-people">Philosophy
-          saved me from poverty and drugs: that’s why I teach it to kids</a> is an article
-          by Andy West (<i class="newspaper">The Guardian</i>, 19 November 2015).
+          <a href="http://www.theguardian.com/commentisfree/2015/nov/19/philosophy-poverty-drugs-kids-young-people">Philosophy saved me from poverty and drugs: that’s why I teach it to kids</a>
+          is an article by Andy West (<i class="newspaper">The Guardian</i>, 19 November 2015).
           Take-away quote:
           <q>I teach philosophy in schools because it allows young people
           to challenge authority and express themselves in a way that creates rather than destroys their life opportunities.</q>
           <br />
-          <a href="http://www.theguardian.com/commentisfree/2013/nov/21/teaching-philosophy-to-children-its-a-great-idea">Teaching philosophy to children?
-          It's a great idea</a> is a related article by Michelle Sowey (<i class="newspaper">The Guardian</i>, 20 November 2013)
+          <a href="http://www.theguardian.com/commentisfree/2013/nov/21/teaching-philosophy-to-children-its-a-great-idea">Teaching philosophy to children? It's a great idea</a>
+          is a related article by Michelle Sowey (<i class="newspaper">The Guardian</i>, 20 November 2013)
           in which the author describes some of her own (positive!) experiences with teaching philosophy to primary school children
           and advocates the inclusion of philosophy in primary school curricula.
           Take-away quote:
@@ -161,11 +158,9 @@
           As one 10-year-old said, <q>I’ve started to actually solve arguments and problems with philosophy. And it works better than violence or anything else.</q></q>
         </li>
         <li>
-          <a href="http://www.theguardian.com/commentisfree/2014/jan/06/bertrand-russell-everyday-value-of-philosophy">Bertrand Russell: 
-          the everyday value of philosophy</a> is an article by Clare Carlisle
-          (<i class="newspaper">The Guardian</i>, 6 January 2014)
-          that discusses the views on the purpose and importance of philosophy
-          that Bertrand Russell expressed in his 1946 essay
+          <a href="http://www.theguardian.com/commentisfree/2014/jan/06/bertrand-russell-everyday-value-of-philosophy">Bertrand Russell: the everyday value of philosophy</a>
+          by Clare Carlisle (<i class="newspaper">The Guardian</i>, 6 January 2014)
+          is an article that discusses the views on the purpose and importance of philosophy that Bertrand Russell expressed in his 1946 essay
           <a href="http://www.users.drew.edu/~jlenz/br-lay-philosophy.html">Philosophy for Laymen</a>.
         </li>
         <li>
@@ -252,7 +247,7 @@
           <!--@@PDF-->
         </li>
         <li>Feloni, Richard:
-          <a href="http://uk.businessinsider.com/reid-hoffman-linkedin-credits-success-to-philosophy-education-2017-11?r=US&IR=T&__prclt=rHX1Sczr">Billionaire LinkedIn founder Reid Hoffman says his masters in philosophy has helped him more than an <abbr>MBA</abbr></a>,
+          <a href="http://uk.businessinsider.com/reid-hoffman-linkedin-credits-success-to-philosophy-education-2017-11?r=US&amp;IR=T&amp;__prclt=rHX1Sczr">Billionaire LinkedIn founder Reid Hoffman says his masters in philosophy has helped him more than an <abbr>MBA</abbr></a>,
           <i class="magazine">Business Insider</i>, 24.11.2017.
         </li>
         <li>Montag, Ali:
@@ -287,7 +282,7 @@
         <li lang="fr">Deleuze, Gilles; Guattari, Félix:
           <i class="booktitle">Qu'est-ce que la philosophie&nbsp;?</i>
           Les éditions de Minuit, 1991. Collection « Critique ». (208 pages)
-          <a href="http://www.leseditionsdeminuit.com/f/index.php?sp=liv&livre_id=2024"><abbr>ISBN</abbr> 2707313866</a>
+          <a href="http://www.leseditionsdeminuit.fr/livre-Qu_est_ce_que_la_philosophie__-2024-1-1-0-1.html"><abbr>ISBN</abbr> 2707313866</a>
           (<span lang="en-GB">This webpage also contains excerpts from reviews of the book.</span>)&nbsp;/
           <a href="http://vitrine.edenlivres.fr/publications/30636-qu-est-ce-que-la-philosophie-"><abbr>ISBN</abbr>  9782707319425</a>&nbsp;/
           <abbr>ISBN</abbr>  9782707327857 (<abbr>PDF</abbr>).
@@ -547,8 +542,8 @@
       <h2>Knowledge and Progress in Philosophy</h2>
       <p>Some people claim that philosophy makes no progress or even that it is dead
         (<abbr>e.g.</abbr>
-        <a href="https://www.youtube.com/watch?v=pdLdA8E1Oa0&t=1m1s">Stephen Hawking</a>,
-        <!-- Matt Warman: "Stephen Hawking tells Google ‘philosophy is dead’", The Telegraph, 17 May 2011: http://www.telegraph.co.uk/technology/google/8520033/Stephen-Hawking-tells-Google-philosophy-is-dead.html 
+        <a href="https://www.youtube.com/watch?v=pdLdA8E1Oa0&amp;t=1m1s">Stephen Hawking</a>,
+        <!--Matt Warman: "Stephen Hawking tells Google ‘philosophy is dead’", The Telegraph, 17 May 2011: http://www.telegraph.co.uk/technology/google/8520033/Stephen-Hawking-tells-Google-philosophy-is-dead.html
           @@Also check Hawking's book "The Grand Design".
         -->
         which led to
@@ -732,7 +727,7 @@
       </p>
       <ul>
         <li>Dietrich, Eric:
-          <a href="http://commons.pacificu.edu/cgi/viewcontent.cgi?article=1396&context=eip">There Is No Progress in Philosophy</a> (<abbr>PDF</abbr>),
+          <a href="http://commons.pacificu.edu/cgi/viewcontent.cgi?article=1396&amp;context=eip">There Is No Progress in Philosophy</a> (<abbr>PDF</abbr>),
           <i class="journal">Essays in Philosophy</i>, 12.2 (July 2011: Philosophy's Future: Science or Something Else?).
           <br />According to Dietrich, philosophy still deals with the same questions as 2500 years ago.
           Philosophy <q>morphs and transforms to stay current</q>: ideas and theories are reformulated in modern language, but that is all the progress there is.
@@ -1914,6 +1909,10 @@
           <a href="https://www.youtube.com/watch?v=Rnmfe6qskRY">Did the Sokal affair "destroy postmodernism"?</a>
           (YouTube, 10 minutes, 21.05.2018).
           <!--@@rewatch; see also comment at https://www.youtube.com/watch?v=Rnmfe6qskRY&lc=UgzvM-MIbUrYrt5lvJ14AaABAg -->
+        </li>
+        <li>Hill, Samantha Rose:
+          <a href="https://aeon.co/essays/for-hannah-arendt-totalitarianism-is-rooted-in-loneliness">Where loneliness can lead / For Hannah Arendt, totalitarianism is rooted in loneliness</a>,
+          <i class="website">Aeon</i>, 16.10.2020.
         </li>
       </ul>
     </section>
