Add: Burke: Connections

--- a/science/index.html
+++ b/science/index.html
@@ -404,6 +404,13 @@
             </li>
           </ul>
         </li>
+        <li>Burke, James:
+          <i class="booktitle">Connections</i>. Simon &amp; Schuster, 2012. (320 pages)
+          <a href="https://www.simonandschuster.co.uk/books/Connections/James-Burke/9781451685060"><abbr>ISBN</abbr> 9781451685060 (ebook)</a>.
+          <br />This book, originally published in 1995, was based on the
+          <a href="https://en.wikipedia.org/wiki/Connections_(TV_series)"><abbr>TV</abbr> series Connections</a>
+          and is now only available as an ebook.
+        </li>
         <li>Atkins, Peter:
           <i class="booktitle">Galileo's Finger: The Ten Great Ideas of Science</i>. Oxford University Press, 2004. (398 pages)
           <a href="https://global.oup.com/academic/product/galileos-finger-9780198609414"><abbr>ISBN</abbr> 9780198609414</a>.
