Add: Berlin: Karl Marx (1939)

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -183,6 +183,11 @@
       <h2>Books on Marx or Marxism</h2>
       <p>Titles are listed in order of publication.</p>
       <ul>
+        <li>Berlin, Isaiah:
+          <i class="booktitle">Karl Marx</i>. 1939. Fifth edition. Edited by Henry Hardy. Princeton University Press, 2013. (352 pages)
+          <a href="https://press.princeton.edu/books/paperback/9780691156507/karl-marx"><abbr>ISBN</abbr> 9780691156507</a>.
+          <br />This was Berlin's first monograph.
+        </li>
         <li>Fromm, Erich:
           <i class="booktitle">Marx's Concept of Man</i>. 1961.
           See the Wikipedia article
