--- a/lijst.html
+++ b/lijst.html
@@ -430,11 +430,6 @@
         Penguin, 2002. (576 pages)
         <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
       </li>
-      <li>Garber, Marjorie:
-        <i class="booktitle">Shakespeare After All</i>.
-        Anchor, 2005. (1008 pages)
-        <a href="http://www.penguinrandomhouse.com/books/57928/shakespeare-after-all-by-marjorie-garber/"><abbr>ISBN</abbr> 9780385722148</a>.
-      </li>
       <li class="perhapsnot">Craig, Hugh; Kinney, Arthur F. (editors): <i class="booktitle">Shakespeare, Computers, and the Mystery of Authorship</i>.
         Cambridge University Press, 2012.
         <a href="http://www.cambridge.org/de/academic/subjects/literature/english-literature-general-interest/shakespeare-computers-and-mystery-authorship?format=PB"><abbr>ISBN</abbr> 9781107407084</a>.
@@ -530,6 +525,10 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
+      <li><span lang="fr">Klossowski, Pierre:
+        <i class="booktitle">Un si funeste désir</i>. (1963) Collection L'Imaginaire. Gallimard, 1994. (224 pages)
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/L-Imaginaire/Un-si-funeste-desir" hreflang="fr"><abbr>ISBN</abbr> 9782070737420</a>.
+      </li>
       <li><span lang="fr">Apostolidès, Jean-Marie:
         <i class="booktitle">Les métamorphoses de Tintin</i>. Flammarion,</span> 2011. (448 pages)
         <a href="https://editions.flammarion.com/les-metamorphoses-de-tintin/9782081249073"><abbr>ISBN</abbr> 9782081249073</a>.
