Add: Klossowski: Un si funeste désir

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2341,6 +2341,10 @@
           University of California Press, 2009. (344 pages)
           <a href="https://www.ucpress.edu/book/9780520259607/why-i-am-not-a-scientist"><abbr>ISBN</abbr> 9780520259607</a>.
         </li>
+        <li><span lang="fr">Klossowski, Pierre:
+          <i class="booktitle">Un si funeste désir</i>. (1963) Collection L'Imaginaire. Gallimard, 1994. (224 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/L-Imaginaire/Un-si-funeste-desir" hreflang="fr"><abbr>ISBN</abbr> 9782070737420</a>.
+        </li>
       </ul>
     </section>
 
