Add: Aron: Le Marxisme de Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -207,6 +207,16 @@
           <i class="booktitle">Marx, critique du marxisme</i>. Petite Bibliothèque Payot. Payot,</span> 2000. (560 pages)
           <a href="https://www.payot-rivages.fr/payot/livre/marx-critique-du-marxisme-9782228892964" hreflang="fr"><abbr>ISBN</abbr> 978-2-228-89296-4</a>.
         </li>
+        <li><span lang="fr">Aron, Raymond:
+          <i class="booktitle">Le Marxisme de Marx</i>. Préface et notes par Jean-Claude Casanova et Christian Bachelier. Éditions de Fallois,</span> 2002. (768 pages)
+          <a href="https://www.editionsdefallois.com/livre/le-marxisme-de-marx/" hreflang="fr"><abbr>ISBN</abbr> 9782877064231</a>.
+          <br />This book is based on a series of lectures that Raymon Aron gave at the Sorbonne and the <span lang="fr">Collège de France</span>.
+          <br />See also
+          <span lang="fr"><abbr>A.S.</abbr>: <a href="https://www.humanite.fr/node/280370" hreflang="fr">Le marxisme selon Raymond Aron</a>,
+          <i class="website">L'Humanité</i>,</span> 24.02.2003, and
+          Gandillot, Thierry: <a href="https://www.lexpress.fr/culture/livre/le-marxisme-de-marx_818299.html" hreflang="fr">Le Marx d'Aron</a>,
+          <i class="magazine">L'Express</i>,</span> 07.11.2002.
+        </li>
         <li>Shapiro, Stephen:
           <i class="booktitle">How to Read Marx's Capital</i>. How to Read Theory. Pluto Press, 2008. (192 pages)
           <a href="https://www.plutobooks.com/9780745325613/how-to-read-marxs-capital/"><abbr>ISBN</abbr> 9780745325613</a>.
