--- a/lijst.html
+++ b/lijst.html
@@ -426,6 +426,10 @@
   <section id="literature">
     <h2>Literature</h2>
     <ul>
+      <li><span lang="fr">Pivot, Bernard; Pivot, Cécile:
+        <i class="booktitle">Lire !</i>. Flammarion,</span> 2018. (192 pages)
+        <a href="https://editions.flammarion.com/lire/9782081416307" hreflang="fr"><abbr>ISBN</abbr> 9782081416307</a>.
+      </li>
       <li class="perhapsnot">Ovid: <i class="booktitle">Metamorphoses</i>. Translated by Arthur Golding. Edited by Madeleine Forey. Penguin Classics.
         Penguin, 2002. (576 pages)
         <a href="https://www.penguin.co.uk/books/33717/the-metamorphoses/9780140422306/"><abbr>ISBN</abbr> 978-0140422306</a>.
