--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1348,6 +1348,23 @@
         and
         <a href="marx_karl.html">Karl Marx</a>.
       </p>
+
+      <h3>Plato (428/427 or 424/423 – 348/347 <abbr>BC</abbr>)</h3>
+      <ul>
+        <li>Kraut, Richard:
+          <a href="https://plato.stanford.edu/entries/plato/">Plato</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 20.03.2004; last updated on 01.08.2017.
+        </li>
+        <li>Suzanne, Bernard:
+          <a href="https://www.plato-dialogues.org/works.htm">Plato and his dialogues: a list of Plato's works</a>,
+          <i class="website">Plato and his dialogues</i>, 16.05.1996; last updated on 23.05.2015.
+        </li>
+        <li>Suzanne, Bernard:
+          <a href="https://www.plato-dialogues.org/fr/plato.htm" hreflang="fr">Platon et ses dialogues: liste des oeuvres de Platon</a>,
+          <i class="website">Platon et ses dialogues</i>, 29.11.1997; last updated on 22.01.2019.
+        </li>
+      </ul>
+
       <h3>Aristotle (384 – 322 <abbr>BC</abbr>)</h3>
       <ul>
         <li>
@@ -1411,6 +1428,10 @@
         <li>
           <a href="https://www.youtube.com/watch?v=G5cAxJCz1Xk">Susan James: Why Should We Read Spinoza? (07/11/2014)</a>
           (<i class="ytchannel">RoyIntPhilosophy</i> on YouTube, 48 minutes, 08.11.2020).
+        </li>
+        <li><span lang="fr">Vaysse, Jean-Marie:
+          <a href="https://journals.openedition.org/philonsorbonne/410">Spinoza et le problème de la peur : metus et timor</a>,
+          <i class="journal">Philonsorbonne</i>,</span> 6 (2012).
         </li>
       </ul>
 
@@ -2820,6 +2841,10 @@
         <li><a href="https://en.wikipedia.org/wiki/Rudolf_Lingens">Rudolf Lingens</a>,
           <i class="website">Wikipedia</i>.<br />Quote:
           <q>Rudolph Lingens is a fictional character often used by contemporary analytic philosophers as a placeholder name in a hypothetical scenario which illustrates some feature of the indexicality of natural language.</q>
+        </li>
+        <li><span lang="fr">
+          <a href="https://la-philosophie.com/films-philosophiques" hreflang="fr">Les Films Philosophiques</a>,
+          <i class="website">La-Philosophie.com</i></span> (no date).
         </li>
         <li>Sherwood, Harriet:
           <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
