--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1528,6 +1528,29 @@
         </li>
       </ul>
 
+      <h3 lang="de">Arthur Schopenhauer (1788 – 1860)</h3>
+      <ul>
+        <li>Wicks, Robert:
+          <a href="https://plato.stanford.edu/entries/schopenhauer/">Arthur Schopenhauer</a>,
+          <i class="website">Stanford Encyclopedia of Philosophy</i>, 12.05.2003, updated on 11.05.2017.
+        </li>
+        <li>
+          <a href="http://schopenhauer.de/" hreflang="de" lang="de">Schopenhauer-Gesellschaft</a>.
+        </li>
+        <li><span lang="de">
+          <a href="https://www.philosophie.fb05.uni-mainz.de/fs_schopenhauer/" hreflang="de" >Schopenhauer-Forschungsstelle</a>,
+          <i class="website">Johannes Gutenberg-Universität Mainz</i>.</span>
+        </li>
+        <li>
+          <a href="https://en.wikisource.org/wiki/Author:Arthur_Schopenhauer">Author:Arthur Schopenhauer</a>,
+          <i class="wiki">Wikisource</i> (texts in English).
+        </li>
+        <li>
+          <a href="https://de.wikisource.org/wiki/Arthur_Schopenhauer" hreflang="de" lang="de">Arthur Schopenhauer</a>,
+          <i class="wiki">Wikisource</i> (German texts).
+        </li>
+      </ul>
+
       <h3>Friedrich Nietzsche (1844 – 1900)</h3>
       <ul>
         <li>
