Add: Hammand: Schopenhauer

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1549,6 +1549,11 @@
           <a href="https://de.wikisource.org/wiki/Arthur_Schopenhauer" hreflang="de" lang="de">Arthur Schopenhauer</a>,
           <i class="wiki">Wikisource</i> (German texts).
         </li>
+        <li>Hammond, L. James:
+          <a href="https://ljhammond.com/classics/cl1.htm#scho">Schopenhauer</a>,
+          in <i class="booktitle">Realms of Gold: A Sketch of Western Literature</i>, 2017.
+          <!--@@PDF-->
+        </li>
       </ul>
 
       <h3>Friedrich Nietzsche (1844 – 1900)</h3>
