Add: Great Philosophers: Schopenhauer

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1554,6 +1554,10 @@
           in <i class="booktitle">Realms of Gold: A Sketch of Western Literature</i>, 2017.
           <!--@@PDF-->
         </li>
+        <li>
+          <a href="http://oregonstate.edu/instruct/phl201/modules/Philosophers/Schopenhauer/schopenhauer.html">Great Philosophers: Schopenhauer</a>,
+          <i class="website">InterQuest: Introducing Philosophy (Oregon State University)</i>,
+        </li>
       </ul>
 
       <h3>Friedrich Nietzsche (1844 – 1900)</h3>
