Add: Arthur Schopenhauer Homepage / Japan Schopenhauer Association

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1558,6 +1558,9 @@
           <a href="http://oregonstate.edu/instruct/phl201/modules/Philosophers/Schopenhauer/schopenhauer.html">Great Philosophers: Schopenhauer</a>,
           <i class="website">InterQuest: Introducing Philosophy (Oregon State University)</i>,
         </li>
+        <li>
+          <a href="http://schopenhauer.org/index.htm">Arthur Schopenhauer Homepage / Japan Schopenhauer Association</a>.
+        </li>
       </ul>
 
       <h3>Friedrich Nietzsche (1844 – 1900)</h3>
