Add: La philosophie de Schopenhauer

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1561,6 +1561,10 @@
         <li>
           <a href="http://schopenhauer.org/index.htm">Arthur Schopenhauer Homepage / Japan Schopenhauer Association</a>.
         </li>
+        <li><span lang="fr">
+          <a href="https://la-philosophie.com/schopenhauer-philosophie" hreflang="fr">La philosophie de Schopenhauer</a>,
+          <i class="website">La-Philosophie.com</i>,</span> (no date).
+        </li>
       </ul>
 
       <h3>Friedrich Nietzsche (1844 – 1900)</h3>
