Add: Sadler: The 10 Best Philosophy Books for Beginners

--- a/philosophy/learningphilosophy.html
+++ b/philosophy/learningphilosophy.html
@@ -74,6 +74,17 @@
       </p>
     </blockquote>
     -->
+    <!--
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://twitter.com/KevinZollman/status/1348395803849576448">When I was 10 or so my friend's mother was a philosopher.  My parents were physicists.  I said to my dad: "I know that physicists do experiments, what do philosophers do?"
+        <br />In my dad's dry sense of humor, he said, "Nothing. They just read magazines all day."</q>
+        <cite><a href="https://twitter.com/KevinZollman/status/1348395803849576448">Kevin J.S. Zollman, philosopher and gamme theorist</a>,
+        on Twitter, 10.01.2021.
+        </cite>
+      </p>
+    </blockquote>
+    -->
 
 
     <h2>Three Complementary Paths</h2>
@@ -502,6 +513,23 @@
       </li>
       <li><span lang="de">Diehl, Ulrich Walter:
         <a href="https://www.ulrich-walter-diehl.de/philosophie/" hreflang="de">Was ist Philosophie?</a></span>.
+      </li>
+      <li>Sadler, Gregory B.:
+        <a href="https://medium.com/@Gregory_Sadler/the-10-best-philosophy-books-for-beginners-6d1326f81d5">The 10 Best Philosophy Books For Beginners</a>,
+        <i class="blog">Gregory B. Sadler, Ph.D. | Medium</i>, 11.05.2018.
+        <br />Sadler recommends the following books:
+        Plato's <i class="booktitle">The Last Days of Socrates</i>
+        (which includes <i class="booktitle">Euthyphro</i>, <i class="booktitle">Apology</i>, <i class="booktitle">Crito</i> and <i class="booktitle">Phaedo</i>),
+        <i class="booktitle">Nicomachean Ethics</i> by Aristotle,
+        <i class="booktitle">Discourses, Fragments, Handbook</i> by Epictetus,
+        <i class="booktitle">Confessions</i> by Augustine of Hippo,
+        <i class="booktitle">Consolation of Philosophy</i> by Boethius,
+        <i class="booktitle">Three Philosophical Dialogues</i> by Anselm of Canterbury
+        (which includes <i class="booktitle">On Truth</i>, <i class="booktitle">On Freedom of Choice</i> and <i class="booktitle">On The Fall of the Devil</i>),
+        <i class="booktitle">Selected Writings</i> by Thomas Aquinas (Penguin Classics, 1999),
+        <i class="booktitle">Meditations on First Philosophy</i> by René Descartes,
+        <i class="booktitle">Vindication of the Rights of Women</i> by Mary Wollstonecraft and
+        <i class="booktitle">The Genealogy of Morals</i> by Friedrich Nietzsche.
       </li>
       <li>Sadler, Gregory B.:
         <a href="https://www.youtube.com/watch?v=xgf2jztjaF4"><abbr>FAQ</abbr>: <abbr>Dr</abbr> Sadler Responds #8 - You Have To Read The Actual Philosophical Text</a>
