Add: Hayes: Let's stop trying to teach students critical thinking

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -189,8 +189,8 @@
       <li>DiCarlo, Christopher: 
         <i class="booktitle">How to Become a Really Good Pain in the Ass: A Critical Thinker's Guide to Asking the Right Questions</i>.
         Prometheus Books, 2011. (398 p.) 
-        <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&cPath=1&products_id=2067"><abbr>ISBN</abbr> 978-1-61614-397-8</a>.
-        <!-- Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
+        <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&amp;cPath=1&amp;products_id=2067"><abbr>ISBN</abbr> 978-1-61614-397-8</a>.
+        <!--Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
       </li>
       <li>Krauss, Lawrence M.:
         <a href="https://www.youtube.com/watch?v=RhZ-WN35O4E">Why Schools Should Teach Skepticism Above Obedience</a>,
@@ -260,6 +260,12 @@
       <li>
         <a href="https://associationslibres.wordpress.com/" hreflang="fr" lang="fr">Associations Libres</a>:
         a French blog about science, skepticism and pseudoscience.
+      </li>
+      <li>Hayes, Dennis:
+        <a href="https://theconversation.com/lets-stop-trying-to-teach-students-critical-thinking-30321">Let’s stop trying to teach students critical thinking</a>,
+        <i class="website">The Conversation</i>, 08.08.2014 (Creative Commons).
+        <br />Dennis Hayes is professor of education at the University of Derby.
+        <!--@@summarise; local copy: hayes-stop-trying-to-teach-students-critical-thinking.html -->
       </li>
     </ul>
     <!--Many questions about teaching and assessing critical thinking on ResearchGate:
@@ -533,11 +539,11 @@
         <i class="blog">Brainpickings</i>, 18 August 2014.
       </li>
     </ul>
-    <!-- See also:
+    <!--See also:
       * https://www.bibliovault.org/BV.book.epl?ISBN=9780809312467 
     -->
 
-    <!-- Richard Dawkins: "The Tyranny of the Discontinuous Mind": https://richarddawkins.net/2013/01/the-tyranny-of-the-discontinuous-mind-christmas-2011/
+    <!--Richard Dawkins: "The Tyranny of the Discontinuous Mind": https://richarddawkins.net/2013/01/the-tyranny-of-the-discontinuous-mind-christmas-2011/
       Originally published in New Statesman, the Christmas issue for 2011, of which Dawkins was guest Editor. 
     -->
     <h2>Other Links</h2>
@@ -674,6 +680,36 @@
           There is nothing to see here except for incoherent ramblings."
       -->
     </ul>
+  <!--
+  <section>
+    <h2></h2>
+    <ul>
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i>,</span>
+      </li>
+      <li>
+        <a href=""></a>:
+        <q></q>
+        <br />:
+        <a href=""></a>
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>,
+        <i class=""></i>,
+      </li>
+      <li>
+        <a href=""></a>
+        (<i class="ytchannel"></i> on YouTube, minutes, ).
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+    </ul>
+  </section>
+  -->
   </main>
 
   <footer>
