Add: Floyd: Why we need to teach political philosophy in schools

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1140,6 +1140,11 @@
           <a href="https://www.theguardian.com/inequality/2020/dec/20/john-rawls-can-liberalisms-great-philosopher-come-to-the-wests-rescue-again">John Rawls: can liberalism's great philosopher come to the west's rescue again?</a>,
           <i class="newspaper">The Observer</i>, 20.12.2020.
         </li>
+        <li>Floyd, Jonathan:
+          <a href="https://theconversation.com/why-we-need-to-teach-political-philosophy-in-schools-57749">Why we need to teach political philosophy in schools</a>,
+          <i class="website">The Conversation</i>, 13.06.2016 (Creative Commons).
+          <!--@@summarise / local copy; contains embedded YouTube video-->
+        </li>
       </ul>
 
       <h3>Philosophy of Mind</h3>
