Add: Andersen: Evil Geniuses. Stanley: How Fascism Works

--- a/lijst.html
+++ b/lijst.html
@@ -265,6 +265,15 @@
   <section id="economics-politics">
     <h2>Economics and Politics</h2>
     <ul>
+      <li>Andersen, Kurt:
+        <i class="booktitle">Evil Geniuses: The Unmaking of America: A Recent History</i>. Penguin Random House, August 2020. (464 pages)
+        <a href="https://www.penguinrandomhouse.com/books/594493/evil-geniuses-by-kurt-andersen/"><abbr>ISBN</abbr> 9781984801340</a>.
+      </li>
+      <li>Stanley, Jason: <i class="booktitle">How Fascism Works: The Politics of Us and Them</i>.
+        Penguin Random House, 2018. (240 pages)
+        <a href="https://www.penguinrandomhouse.com/books/586030/how-fascism-works-by-jason-stanley/"><abbr>ISBN</abbr> 9780525511830 (hardcover) / 9780525511854 (paperback)</a>.
+        <!-- https://steinkopf-buchhandlung.buchkatalog.de/Product/3000001425887/63243/10002/-3/Buecher_Politik-und-Gesellschaft/Jason-Stanley/How-Fascism-Works/4099276460822241339/4099276460822241224/4099276460822241224 -->
+      </li>
       <li class="perhapsnot">Smith, Adam:
         <strong><i class="booktitle">An Inquiry into the Nature and Causes of the Wealth of Nations</i></strong>.
         Edited by Edwin Cannan. With a Preface by George J. Stigler.
@@ -665,15 +674,24 @@
         <i class="booktitle">Literary Criticism in the 21st Century: Theory Renaissance</i>. Bloomsbury, 2014. (192 pages)
         <a href="https://www.bloomsbury.com/uk/literary-criticism-in-the-21st-century-9781472527707/"><abbr>ISBN</abbr> 9781472527707</a>.
       </li>
-      <!--
-      <li> : <i class="booktitle"></i>. 
-        <a href=""><abbr>ISBN</abbr> </a>.
-      </li>
-      <li> : <i class="booktitle"></i>. 
-        <abbr>ISBN</abbr>.
-      </li>
-      -->
     </ul>
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li> : <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+        <li> : <i class="booktitle"></i>.
+          <abbr>ISBN</abbr>.
+        </li>
+        <li>
+          <i class="booktitle"></i>.
+          <a href=""><abbr>ISBN</abbr> </a>.
+        </li>
+      </ul>
+    </section>
+    -->
   </section>
   <!--
     * Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 
