Add: The Cambridge History of Political Thought, volumes 1-4

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1136,6 +1136,26 @@
             These thinkers remade political philosophy in ways that influenced not only their own trajectory but also that of their critics.
           </q>
         </li>
+        <li>Rowe, Christopher; Schofield, Malcolm (editors):
+          <i class="booktitle">The Cambridge History of Greek and Roman Political Thought</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 2005. (766 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/classical-studies/ancient-philosophy/cambridge-history-greek-and-roman-political-thought?format=PB"><abbr>ISBN</abbr> 9780521616690</a>.
+        </li>
+        <li>Burns, J. H. (editor):
+          <i class="booktitle">The Cambridge History of Medieval Political Thought c.350–c.1450</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 1991. (818 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-medieval-political-thought-c350c1450?format=PB&amp;isbn=9780521423885"><abbr>ISBN</abbr> 9780521423885</a>.
+        </li>
+        <li>Burns, J. H. (editor):
+          <i class="booktitle">The Cambridge History of Political Thought 1450–1700</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 1994. (812 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-political-thought-14501700?format=PB"><abbr>ISBN</abbr> 9780521477727</a>.
+        </li>
+        <li>Goldie, Mark; Wokler, Robert (editors):
+          <i class="booktitle">The Cambridge History of Eighteenth-Century Political Thought</i>. The Cambridge History of Political Thought.
+          Cambridge University Press, 2016. (936 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/cambridge-history-eighteenth-century-political-thought?format=PB"><abbr>ISBN</abbr> 9781316630280</a>.
+        </li>
         <li>Coman, Julian:
           <a href="https://www.theguardian.com/inequality/2020/dec/20/john-rawls-can-liberalisms-great-philosopher-come-to-the-wests-rescue-again">John Rawls: can liberalism's great philosopher come to the west's rescue again?</a>,
           <i class="newspaper">The Observer</i>, 20.12.2020.
